<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ghost Touch Blocker</string>
    <string name="service_name">Touch Blocker Service</string>
    <string name="accessibility_service_description">Block touch events in selected screen regions</string>
    <string name="start_blocking">Start Blocking</string>
    <string name="stop_blocking">Stop Blocking</string>
    <string name="select_region">Select Region</string>
    <string name="full_screen">Full Screen</string>
    <string name="setup_guide">Setup Guide</string>
    <string name="permission_overlay">Overlay Permission</string>
    <string name="permission_accessibility">Accessibility Service</string>
    <string name="permission_notification">Notification Permission</string>
    <string name="grant">Grant</string>
    <string name="enabled">Enabled</string>
    <string name="blocking_active">Touch blocking active</string>
    <string name="show_floating_button">Show Floating Stop Button</string>
    <string name="root_grant_all">Root: Grant All Permissions</string>
    <string name="overlay_color">Overlay Color</string>
    <string name="transparency">Transparency</string>
    <string name="auto_start_on_boot">Auto Start on Boot (Root)</string>
</resources>
